# tkinter-auto-clicker

./: .gitignore  AGENTS.md  CLAUDE.md  DISTRIBUTION.md  README.md  build.bat  pyproject.toml  requirements.txt  windows_autoclicker.spec
.claude/skills/code-reviewer/: SKILL.md  code-reviewer.skill
.claude/skills/code-reviewer/references/: code_review_checklist.md  coding_standards.md  common_antipatterns.md
.claude/skills/code-reviewer/scripts/: code_quality_checker.py  pr_analyzer.py  review_core.py  review_report_generator.py  review_rules.py  review_types.py
.claude/skills/code-reviewer/scripts/tests/: __init__.py  test_integration_flows.py  test_review_core_unit.py
autoclicker/: __init__.py  click_engine.py  dpi.py  hotkey.py  models.py  monitors.py  ui.py
tests/: test_click_engine.py  test_coordinates.py  test_worker.py
tkinter-autoclicker/: __main__.py  click_engine.py  ui.py
